# pydaikin-2.8.0

./: .gitignore  .pre-commit-config.yaml  Makefile  SETTING_MISMATCH_DETECTION_PLAN.md  install_pydaikin.sh  pyproject.toml  requirements.txt
.claude/: claude.md  settings.local.json
.github/workflows/: release.yml
pydaikin/: daikin_airbase.py  daikin_base.py  daikin_brp069.py  daikin_brp072c.py  daikin_brp084.py  daikin_skyfi.py  discovery.py  exceptions.py  factory.py  power.py  response.py  values.py
tests/: integrated_network_test.py  test_daikin_airbase.py  test_daikin_alira_x.py  test_daikin_base.py  test_daikin_brp069_commands.py  test_daikin_brp084.py  test_discovery.py  test_factory.py  test_init.py  test_multiple_devices.py  test_network_devices.py  test_power_mixin.py  test_power_sensor.py  test_skyfi.py
